# RUBEMHydrological

./: .gitignore  .gitmodules  01_compile_ui.bat  BaseDialog.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.md  Config.txt  LICENSE  LICENSE.md  README.md  Teste_adp.py  __init__.py  config-18-02.ini  config.ini  config1.ini  metadata.txt  pyproject.toml  resources.qrc  resources_rc.py  rubem_config.py  rubem_hydrological.py  rubem_hydrological_dialog.py  rubem_hydrological_dialog_base.ui  rubem_hydrological_dialog_base_ui.py  rubem_input_validators.py  rubem_output_item.py  rubem_output_plot.py  rubem_raster_utils.py  rubem_thread_workers.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  user_interface_bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
config/: config.ini  sphy_config_template.cfg  sphy_config_template_backup.txt
doc/: about.html  requirements.txt
doc/source/: changelog.rst  conf.py  faq.rst  index.rst  installation.rst  license.rst  (+4 more)
i18n/: rubem_hydrological.pro  rubemhydrological_en_us.ts  rubemhydrological_pt_br.ts
input/: Kr.map  Kr.map.aux.xml  TUcc.map  TUcc.map.aux.xml  TUsat.map  TUsat.map.aux.xml  TUw.map  TUw.map.aux.xml  cob.map  cob.map.aux.xml  kc.tbl  sample.map  sample.map.aux.xml
new_compile ui_bat/: 01 compile ui.bat
plugin/: __version__.py  core.py
scripts/: compile-ui.bat
test/: __init__.py  test_qgis_environment.py  test_resources.py  test_rubem_hydrological_dialog.py  test_translations.py  utilities.py
ui.resources/: ui_BaseDialog.ui  ui_BaseDialog2.ui
(+123 files in other folders)
