[tool.poetry]
name = "RUBEM Hydrological"
version = "1.11.16"
description = "Rainfall rUnoff Balance Enhanced Model (RUBEM) distributed hydrological model QGIS plugin to calculate monthly flows with changes in land use over time."
authors = ["LabSid PHA EPUSP <rubem.hydrological@labsid.eng.br>"]
license = "GPL v3"
readme = "README.md"
homepage = "http://labsid.eng.br/software.aspx?id=17"
repository = "https://github.com/LabSid-USP/RUBEMHyrological"
documentation = "https://rubem-hydrological.readthedocs.io/en/latest"
keywords = ["remote sensing", "hydrology", "water", "hydrological model"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LabSid-USP/RUBEMHyrological/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
